[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mhooge_flask"
version = "1.4.4"
authors = [
  { name="mhooge", email="m_hooge@hotmail.com" },
]
description = "Useful helper functions for running Flask applications"
requires-python = ">=3.10"
dependencies = [
    "Flask >= 2.0.0",
    "Flask-Cors >= 3.0.0",
    "gevent >= 20.0.0",
    "loguru >= 0.6.0",
    "flask-socketio>=5.5.1",
    "sqlalchemy>=2.0.43",
    "marshmallow-sqlalchemy>=1.4.2",
    "pydantic>=2.11.9",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[tool.pdm]
